<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/nav_home" />
        <item
            android:id="@+id/nav_finder"
            android:icon="@drawable/ic_explore_black_24dp"
            android:title="@string/nav_finder" />
        <item
            android:id="@+id/nav_k12"
            android:icon="@drawable/ic_school_black_24dp"
            android:title="@string/nav_k12" />
        <item
            android:id="@+id/nav_schools"
            android:icon="@drawable/ic_domain_black_24dp"
            android:title="@string/nav_schools" />

        <item
            android:id="@+id/nav_tracks"
            android:icon="@drawable/ic_timeline_black_24dp"
            android:title="@string/nav_tracks" />
    </group>

    <item
        android:id="@+id/nav_about"
        android:icon="@drawable/ic_info_black_24dp"
        android:title="@string/nav_about" />
</menu>
