<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="eng.soft.schoolfinder.fragments.Fragment_tracks">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:scaleType="centerCrop"
                android:src="@drawable/k12_tracks"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/gradient"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:layout_margin="16dp"
                android:fontFamily="sans-serif-condensed"
                android:text="The Four Senior High Career Tracks"
                android:textColor="@color/colorWhite"
                android:textSize="24dp"
                android:textStyle="bold"/>
        </FrameLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:alpha="0.8"
            android:lineSpacingMultiplier="1.2"
            android:text="@string/content_tracks"
            android:textColor="@color/colorBlack"
            android:textIsSelectable="true"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:alpha="0.8"
            android:lineSpacingMultiplier="1.2"
            android:text="@string/content_track_list"
            android:textColor="@color/colorBlack"
            android:textIsSelectable="true"/>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:scaleType="centerInside"
            android:src="@drawable/k12_tracks_list"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:alpha="0.8"
            android:lineSpacingMultiplier="1.2"
            android:text="@string/content_track1"
            android:textColor="@color/colorBlack"
            android:textIsSelectable="true"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="16dp"
            android:alpha="0.8"
            android:fontFamily="sans-serif-condensed"
            android:text="The Tracks"
            android:textColor="@color/colorBlack"
            android:textSize="24dp"
            android:textStyle="bold"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="16dp"
            android:alpha="0.8"
            android:fontFamily="sans-serif-condensed"
            android:text="Academic"
            android:textColor="@color/colorBlack"
            android:textSize="20dp"
            android:textStyle="bold"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:alpha="0.8"
            android:lineSpacingMultiplier="1.2"
            android:text="@string/content_track_acad"
            android:textColor="@color/colorBlack"
            android:textIsSelectable="true"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:alpha="0.8"
            android:fontFamily="sans-serif-condensed"
            android:text="Arts and Design"
            android:textColor="@color/colorBlack"
            android:textSize="20dp"
            android:textStyle="bold"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:alpha="0.8"
            android:lineSpacingMultiplier="1.2"
            android:text="@string/content_track_arts"
            android:textColor="@color/colorBlack"
            android:textIsSelectable="true"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:alpha="0.8"
            android:fontFamily="sans-serif-condensed"
            android:text="Sports"
            android:textColor="@color/colorBlack"
            android:textSize="20dp"
            android:textStyle="bold"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:alpha="0.8"
            android:lineSpacingMultiplier="1.2"
            android:text="@string/content_track_sports"
            android:textColor="@color/colorBlack"
            android:textIsSelectable="true"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:alpha="0.8"
            android:fontFamily="sans-serif-condensed"
            android:text="TVL"
            android:textColor="@color/colorBlack"
            android:textSize="20dp"
            android:textStyle="bold"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:alpha="0.8"
            android:lineSpacingMultiplier="1.2"
            android:text="@string/content_track_tvl"
            android:textColor="@color/colorBlack"
            android:textIsSelectable="true"/>
    </LinearLayout>
</ScrollView>
