<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingTop="64dp"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="eng.soft.schoolfinder.activity_login"
    tools:showIn="@layout/activity_login"
    >

    <android.support.design.widget.TextInputLayout
        android:id="@+id/username_Layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:padding="16dp">

        <EditText
            android:id="@+id/txt_login_uname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/login_uname"
            android:inputType="textEmailAddress|text"
            android:textColor="@color/colorBlack"
            android:textSize="16sp" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/password_Layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp">

        <EditText
            android:id="@+id/txt_login_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/login_password"
            android:inputType="textPassword"
            android:textColor="@color/colorBlack"
            android:textSize="16sp" />
    </android.support.design.widget.TextInputLayout>

    <android.support.v7.widget.ButtonBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp">

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:text="@string/login_login"
            android:textColor="@color/colorWhite"
            android:textSize="16sp"/>
    </android.support.v7.widget.ButtonBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="16dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="No Account?"
            android:textSize="18sp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            android:text="Sign Up"
            android:textColor="@color/colorPrimary"
            android:textSize="18sp"/>
    </LinearLayout>

</LinearLayout>
