<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context="eng.soft.schoolfinder.Activity_School_Details">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar_school"
            android:layout_width="match_parent"
            android:layout_height="160dp"
            android:background="?attr/colorPrimary"
            android:minHeight="?attr/actionBarSize"
            app:popupTheme="@style/AppTheme.PopupOverlay">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:focusableInTouchMode="true"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/schoolLogo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:paddingTop="@dimen/nav_header_vertical_spacing"
                    android:src="@drawable/ic_domain_black_24dp"
                    android:tint="@color/colorWhite" />

                <TextView
                    android:id="@+id/txtSchoolName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="start"
                    android:paddingTop="@dimen/nav_header_vertical_spacing"
                    android:text="@string/placeholder_school_name"
                    android:textSize="20sp"
                    android:textStyle="bold"/>
            </LinearLayout>

        </android.support.v7.widget.Toolbar>

    </android.support.design.widget.AppBarLayout>

    <LinearLayout
        android:id="@+id/school_detail_header"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:theme="@style/ThemeOverlay.AppCompat.Dark"
        app:layout_behavior="@string/appbar_scrolling_view_behavior" >


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.6"
            android:orientation="vertical"
            android:paddingBottom="30dp"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin">

            <TextView
                android:id="@+id/txtSchoolAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minLines="1"
                android:paddingBottom="30dp"
                android:text="@string/placeholder_school_address"
                android:textColor="@color/colorBlack"
                android:textSize="16sp"/>

            <TextView
                android:id="@+id/txtSchoolTracks"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minLines="1"
                android:paddingBottom="48dp"
                android:text="@string/placeholder_school_tracks"
                android:textColor="@color/colorBlack"
                android:textSize="16sp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.3"
            android:orientation="horizontal">

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginTop="24dp"
                android:background="@color/colorPrimary"
                android:gravity="center"
                android:onClick="checkMap"
                android:text="View on Map"
                android:textColor="@color/colorWhite"
                android:textSize="18sp"
                android:textStyle="bold"/>
        </LinearLayout>

    </LinearLayout>

</android.support.design.widget.CoordinatorLayout>
